Fix WhatIDo box shrinking overflow logic

--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -208,7 +208,7 @@
 }
 .what-content-in {
   height: 100%;
-  overflow: visible;
+  overflow: hidden;
 }
 .what-content-in h5 {
   font-weight: 400;
